feat(domain): refacto